<resources>
    <string name="app_name">光氧运动</string>
    <string name="app_exit">再次点击退出</string>
    <string name="app_home">课外体育锻炼</string>
    <string name="app_history">历史运动概况</string>
    <string name="app_result">锻炼成果</string>
    <string name="app_school_leaderboard">校园排行榜</string>
    <string name="app_system_setting">设置</string>

    <string name="actionbar_webview_share">分享到</string>
    <string name="actionbar_webview_cope">复制链接</string>
    <string name="actionbar_webview_open">打开链接</string>

    <!-- 通用动作 -->
    <string name="action_back">返回</string>
    <string name="action_delete">删除</string>
    <string name="action_edit">编辑</string>
    <string name="action_send">发送</string>
    <string name="action_reconnect">请重试</string>
    <string name="action_finish">完成</string>
    <string name="action_prompt">提示</string>
    <string name="action_clear">清空</string>
    <string name="action_save">保存</string>
    <string name="action_share">分享</string>


    <!-- 网络 -->
    <string name="crashhandler_sorry_error">Sorry,程序错误.</string>
    <string name="httpconnection_not_network">网络不给力，请检查网络</string>
    <string name="upload_picture_failed">上传失败</string>
    <string name="download_failed">下载失败</string>
    <string name="download_success">下载完成</string>


    <!-- 主页TAB -->
    <string name="main_tab_title_1">精选</string>
    <string name="main_tab_title_2">发现</string>
    <string name="main_tab_title_3">故事</string>
    <string name="main_tab_title_4">私信</string>
    <string name="main_tab_title_5">我</string>
    <!--修改密码-->
    <string name="modify_first_password">修改初始密码</string>
    <string name="find_password">忘记密码</string>
    <string name="get_sms_mark">点击获取验证码</string>
    <string name="input_phone_num">请输入手机号码</string>
    <string name="input_sms_mark">请输入短信验证码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_new_password_again">再次输入新密码</string>
    <string name="txt_bind_resend">秒后重发</string>
    <string name="action_enter">确定</string>
    <string name="action_register_enter">确定注册</string>

    <!--系统设置-->
    <string name="check_update">检查更新</string>
    <string name="update_log">更新日志</string>
    <string name="about_us">关于我们</string>
    <string name="about_app">关于光氧运动</string>
    <string name="about_company">温州光氧网络科技有限公司 版权所有</string>
    <string name="about_copyright">2017 © Light Oxygen.All Rights Reserved</string>
    <string name="prompt_no_update">当前已是最新版本</string>
    <string name="personal_info">基本资料</string>
    <string name="recharge_center">充值中心</string>
    <string name="security_center">账号绑定</string>
    <string name="no_bind_account_tip">请先账号绑定</string>
    <string name="problem_and_help">问题帮助</string>
    <string name="logout_user">退出登录</string>
    <string name="txt_exit">退出%s？还是在看看？</string>
    <string name="logout_enter">退出</string>
    <string name="see_others">再看看</string>

    <!--手机登录-->
    <string name="login">登录</string>
    <string name="university">学校</string>
    <string name="student_no">学号</string>
    <string name="password">密码</string>
    <string name="login_input_num">请输入您的学号</string>
    <string name="select_your_university">请选择您当前所读学校</string>
    <string name="login_input_password">请输入您的密码</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="modtify_init_password">修改初始密码</string>
    <string name="mobile_number">手机号</string>
    <string name="input_mobile_prompt">请输入您的手机号</string>
    <string name="verification_code">验证码</string>
    <string name="bt_get_verification_code">获取验证码</string>
    <string name="new_password">新密码</string>
    <string name="submit">提交</string>
    <string name="bindStudentNumber">绑定学号</string>

    <!--安全中心-->
    <string name="bound_phone">已绑定手机</string>
    <string name="account_password">输入密码</string>
    <string name="account_password_2">再次输入密码</string>
    <!--注册-->
    <string name="register">注册</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_again">再次输入密码</string>
    <string name="bind_phone">绑定手机</string>
    <string name="register_des">同意《用户协议》</string>

    <!--关于我们-->
    <string name="about_version">当前版本 v%s</string>
    <string name="about_text_1">Copyright © 2017 </string>
    <string name="about_text_2">inc.All Rights Reserved</string>

    <!-- 个人资料 -->
    <string name="tag_info_avatar">头像:</string>
    <string name="tag_info_name">昵称:</string>
    <string name="tag_info_sex">性别:</string>
    <string name="tag_info_sign">签名:</string>
    <string name="tag_info_publish">简介:</string>
    <string name="tag_info_temperament">标签:</string>
    <string name="userinfo_publish_hint">写段话让人知道你的牛X</string>
    <string name="userinfo_sign_hint">个性的签名能为您吸引更多粉丝</string>
    <string name="userinfo_tag_hint">选择您主要直播的游戏</string>
    <string name="tag_info_save">保存</string>
    <string name="txt_info_sign">签名不能超过16个汉字</string>
    <string name="txt_info_self">简介不能超过30个汉字</string>
    <string name="txt_info_title">标题不能超过30个汉字</string>
    <string name="txt_info_des">公告不能超过140个汉字</string>
    <string name="txt_info_name">昵称不能超过7个汉字</string>
    <string name="txt_save_success">保存成功</string>
    <string name="tag_man">男</string>
    <string name="tag_woman">女</string>
    <string name="txt_name_nonull">姓名不能置空</string>
    <string name="disable_emoji">禁止输入表情符号</string>
    <string name="txt_tag_detail">天生丽质难自弃</string>
    <string name="floatshortcutchatgroupview_text_insert_sdcard">请插入SD卡</string>
    <string name="getphotoactivity_text_no_photo">图片不存在</string>
    <string name="crop_but_save">保存</string>
    <string name="cropview_text_operate_fail">操作失败,请重试</string>
    <string name="error_pic_get">获取图片失败</string>
    <string name="error_picupload">图片上传失败</string>

    <!--登录-->
    <string name="error_mobile_empty">请输入手机号。</string>
    <string name="error_mobile_error">手机号错误，请重新输入。</string>
    <string name="error_mobile_vertify">请输入验证码。</string>
    <string name="error_smscode_error">验证码错误</string>
    <string name="error_password">请输入6&#8211;12位字母或数字密码</string>
    <string name="error_password_noput">请输入您的密码</string>
    <string name="error_password_again">请再次输入密码</string>
    <string name="error_password_nosame">两次密码输入不一致</string>
    <string name="error_check_agreement">请勾选用户协议</string>


    <!--空白页面的提示文案-->

    <!-- 首页 -->
    <string name="joinPrompt">当前%s人正在参加</string>
    <string name="meter">米</string>
    <string name="speedNotation">米/秒</string>

    <string name="averageSpeed">平均速度</string>
    <string name="targetTitleSpeed">达标速度</string>
    <string name="targetTime">达标时间</string>

    <string name="distanceText">距离</string>
    <string name="qualifiedDistance">达标距离</string>
    <string name="accumTimesPer">本周累计运动(次)</string>
    <string name="signInCount">打卡(次)</string>
    <string name="curTermSportsCount">本学期累计运动<tt>%s</tt>次</string>

    <!--公用-->
    <string name="digitalPlaceholder">%s</string>

    <string name="score">得分:%s</string>
    <string name="scoreDesc">成绩:%s</string>

    <string name="kcal">千卡</string>
    <string name="consumeKcal">消耗(千卡)</string>
    <string name="kcalPlaceholder">%s 千卡</string>
    <string name="curConsumeEnergy">本次消耗热量：</string>
    <string name="curConsumeEnergyTemp">本次消耗热量: %s千卡</string>
    
    <string name="minute">分钟</string>
    <string name="consumeMinute">耗时(分钟)</string>
    <string name="consumeTime">耗时</string>
    <string name="minutePlaceHolder">%s 分钟</string>


    <string name="username_password_mismatching">用户名和密码不匹配</string>

    <!--运动准备-->
    <string name="gpsLocationing">GPS定位中，请走到开阔地带</string>
    <string name="readyToSport">请做好热身准备</string>
    <string name="remainPower">当前剩余电量%s%%</string>

    <!--锻炼结果-->
    <string name="abnormalData">数据异常</string>
    <string name="qualified">已达标</string>
    <string name="notQualified">未达标</string>


    <string name="manual_open_permission_hint">定位权限已被禁用，请手动授予定位权限 :）</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
