<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="250dp"
              android:layout_height="250dp"
              android:gravity="center"
              android:background="@drawable/bg_corners"
              android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_gps_positioning"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/gpsLocationing"
        android:textSize="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/readyToSport"
        android:textColor="@color/black_60"
        android:textSize="14dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/remainPower"
        android:id="@+id/tvRemainPower"
        android:textColor="@color/blue"
        android:textSize="12dp"/>
</LinearLayout>