<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        style="@style/TitleBarStyle">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TitleTextStyle"
            android:text="@string/register" />

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="@dimen/title_height"
            android:layout_height="@dimen/title_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:src="@drawable/ic_back_white" />

    </RelativeLayout>


    <EditText
        android:id="@+id/register_input_phone_num"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/dimen_15"
        android:background="@color/transparent"
        android:focusable="true"
        android:hint="@string/input_phone_num"
        android:inputType="phone"
        android:paddingLeft="@dimen/dimen_10"
        android:textColor="@color/black_90"
        android:textColorHint="@color/black_60"
        android:textCursorDrawable="@drawable/bg_text_cursor_shape"
        android:textSize="@dimen/text_size_14" />

    <View
        style="@style/vLine"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_15" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/register_input_sms_mark"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dimen_15"
            android:layout_weight="2"
            android:background="@color/transparent"
            android:focusable="true"
            android:hint="@string/input_sms_mark"
            android:inputType="phone"
            android:paddingLeft="@dimen/dimen_10"
            android:textColor="@color/black_90"
            android:textColorHint="@color/black_60"
            android:textCursorDrawable="@drawable/bg_text_cursor_shape"
            android:textSize="@dimen/text_size_14" />

        <View
            style="@style/hLine"
            android:layout_marginBottom="@dimen/dimen_12"
            android:layout_marginTop="@dimen/dimen_12" />


            <TextView
                android:id="@+id/register_get_sms_mark_tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:gravity="center"
                android:text="@string/get_sms_mark"
                android:textSize="@dimen/text_size_14" />

    </LinearLayout>

    <View
        style="@style/vLine"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_15" />

    <EditText
        android:id="@+id/register_input_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="@dimen/dimen_15"
        android:background="@color/transparent"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/dimen_10"
        android:textColor="@color/black_90"
        android:textColorHint="@color/black_60"
        android:textCursorDrawable="@drawable/bg_text_cursor_shape"
        android:textSize="@dimen/text_size_14" />

    <View
        style="@style/vLine"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_15" />

    <EditText
        android:id="@+id/register_input_password_again"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="@dimen/dimen_15"
        android:background="@color/transparent"
        android:hint="@string/input_password_again"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/dimen_10"
        android:textColor="@color/black_90"
        android:textColorHint="@color/black_60"
        android:textCursorDrawable="@drawable/bg_text_cursor_shape"
        android:textSize="@dimen/text_size_14" />

    <View
        style="@style/vLine"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_12"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbUserAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10" />

        <TextView
            android:id="@+id/tvUserAgreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_2"
            android:text="@string/register_des"
            android:textSize="@dimen/text_size_12" />
    </LinearLayout>


        <Button
            android:id="@+id/btConfirmRegist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/action_register_enter"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black_10"
            android:textSize="@dimen/text_size_18" />
</LinearLayout>
