<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rlTitle"
        style="@style/TitleBarStyle"  android:layout_height="@dimen/title_height"
        android:paddingLeft="20dp">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TitleTextStyle"
            android:text="@string/find_password" />


        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="@dimen/title_height"
            android:layout_height="@dimen/title_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:src="@drawable/ic_back_white" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/center_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlTitle"
        android:layout_margin="@dimen/dimen_15"
        android:orientation="vertical">

        <EditText
            android:id="@+id/modify_layout_input_phone_num"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical"
            android:background="@color/transparent"
            android:focusable="true"
            android:hint="@string/input_phone_num"
            android:inputType="phone"
            android:paddingLeft="@dimen/dimen_10"
            android:textColor="@color/black_90"
            android:textColorHint="@color/black_40"
            android:textCursorDrawable="@drawable/bg_text_cursor_shape"
            android:textSize="@dimen/text_size_14" />

        <View style="@style/vLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/modify_layout_input_sms_mark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:background="@color/transparent"
                android:focusable="true"
                android:hint="@string/input_sms_mark"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:textColor="@color/black_90"
                android:textColorHint="@color/black_40"
                android:textCursorDrawable="@drawable/bg_text_cursor_shape"
                android:textSize="@dimen/text_size_14" />

            <View
                style="@style/hLine"
                android:layout_marginBottom="@dimen/dimen_12"
                android:layout_marginTop="@dimen/dimen_12" />


            <TextView
                android:id="@+id/tv_modify_layout_get_sms_mark_tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/get_sms_mark"
                android:textSize="@dimen/text_size_14" />

        </LinearLayout>

        <View style="@style/vLine" />

        <EditText
            android:id="@+id/modify_layout_input_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/transparent"
            android:hint="@string/input_new_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/black_90"
            android:textColorHint="@color/black_40"
            android:textCursorDrawable="@drawable/bg_text_cursor_shape"
            android:textSize="@dimen/text_size_14" />

        <View style="@style/vLine" />

        <EditText
            android:id="@+id/modify_layout_input_password_again"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/transparent"
            android:hint="@string/input_new_password_again"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/black_90"
            android:textColorHint="@color/black_40"
            android:textCursorDrawable="@drawable/bg_text_cursor_shape"
            android:textSize="@dimen/text_size_14" />

        <View style="@style/vLine" />


        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/action_enter"
            android:textColor="@color/black_60"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>
</RelativeLayout>
