<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <RelativeLayout
        android:id="@+id/rlTitle"
        style="@style/TitleBarStyle">

        <ImageButton
            android:id="@+id/ibClose"
            android:layout_width="@dimen/btn_close_size"
            android:layout_height="@dimen/btn_close_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:src="@drawable/btn_close" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TitleTextStyle"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@id/ibClose"
            android:text="@string/login" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/inputContentTitle"
                android:gravity="center"
                android:text="@string/no." />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/etNo"
                    style="@style/inputContentText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/login_input_num"
                    android:inputType="number"
                    android:textColorHint="@color/white_80" />

                <ImageView
                    android:id="@+id/ivNoVisiable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/password_input_selector"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/ivDeleteNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/ivNoVisiable"
                    android:background="@drawable/btn_delete"
                    android:visibility="gone" />
            </RelativeLayout>

            <View style="@style/vLine" />

            <TextView
                android:id="@+id/tvNoErrorPrmpt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:textColor="@color/errorTextColor"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                style="@style/inputContentTitle"
                android:gravity="center"
                android:text="@string/password" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/inputContentText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/error_password_noput"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white_80" />

                <ImageView
                    android:id="@+id/ivPasswordVisiable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/password_input_selector" />

                <ImageView
                    android:id="@+id/ivPasswordDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/ivPasswordVisiable"
                    android:background="@drawable/btn_delete"
                    android:visibility="gone" />
            </RelativeLayout>

            <View style="@style/vLine" />

            <TextView
                android:id="@+id/tvPasswordErrorPrmpt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:textColor="@color/errorTextColor"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_shape_button_round_white"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/login_btn_text_color"
            android:textSize="@dimen/button_text_size" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btLogin"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/login_forget_password"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>
</RelativeLayout>
